kubernetes-manifestes-windows/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment # Nom unique pour le déploiement PostgreSQL
  labels:
    app: postgres # Label pour identifier les pods PostgreSQL
spec:
  replicas: 1 # Pour l'apprentissage, une seule réplique est suffisante
  selector:
    matchLabels:
      app: postgres # Sélectionne les pods avec ce label
  template:
    metadata:
      labels:
        app: postgres # Labels des pods
    spec:
      containers:
        - name: postgres # Nom du conteneur
          image: postgres:16 # L'image officielle de PostgreSQL avec une version stable
          ports:
            - containerPort: 5432 # Port par défaut de PostgreSQL
          env: # Variables d'environnement pour configurer PostgreSQL, récupérées depuis le Secret
            - name: POSTGRES_DB
              value: prod_hybrid_api # Le nom de la base de données
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_USER
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_PASSWORD
          volumeMounts: # Montage du volume persistant
            - name: postgres-data-hybrid-api-k8s
              mountPath: /var/lib/postgresql/data
      volumes: # Définition du volume (utilisera le provisioner de stockage par défaut de Minikube)
        - name: postgres-data-hybrid-api-k8s
          persistentVolumeClaim:
            claimName: postgres-pvc # Nom du PersistentVolumeClaim (PVC)
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service # Nom du service (sera le hostname DNS pour le backend Spring Boot)
spec:
  selector:
    app: postgres # Sélectionne les pods du déploiement PostgreSQL
  ports:
    - protocol: TCP
      port: 5432 # Port du service (accessible à l'intérieur du cluster)
      targetPort: 5432 # Port du conteneur PostgreSQL
  type: ClusterIP # Service accessible uniquement à l'intérieur du cluster
