kubernetes-manifestes-windows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hybrid-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: hybrid-api-front-dev.local
      http:
        paths:
          - path: /api/hybrid-api
            pathType: Prefix
            backend:
              service:
                name: hybrid-api-backend-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hybrid-api-front-service
                port:
                  number: 80

    - host: hybrid-api-back-dev.local
      http:
        paths:
          - path: /api/hybrid-api
            pathType: Prefix
            backend:
              service:
                name: hybrid-api-backend-service
                port:
                  number: 8081

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hybrid-api-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: hybrid-api-front-dev.local
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-front-service
#             port:
#               # Remplacez 80 par le port réel de votre service front-end
#               number: 80
#   - host: hybrid-api-back-dev.local
#     http:
#       paths:
#       - path: /api/hybrid-api
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-backend-service
#             port:
#               number: 8081








# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hybrid-api-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/enable-cors: "true"
#     nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:30080"
#     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
#     nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization,Content-Type"
#     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: hybrid-api-front-dev.local
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-front-service
#             port:
#               number: 80
#   - host: hybrid-api-back-dev.local
#     http:
#       paths:
#       - path: /api/hybrid-api
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-backend-service
#             port:
#               number: 8081



#----------------------

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hybrid-api-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: hybrid-api-front-dev.local
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-front-service
#             port:
#               # Remplacez 80 par le port réel de votre service front-end
#               number: 80
#   - host: hybrid-api-back-dev.local
#     http:
#       paths:
#       - path: /api/hybrid-api
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-backend-service
#             port:
#               number: 8081



#----------------------------pour changer de nom de domaine non publique
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hybrid-api-ingress
#   annotations:
#     # On supprime toutes les annotations de réécriture et de regex
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: monsite.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-front-service
#             port:
#               number: 80
#   - host: api.monsite.com
#     http:
#       paths:
#       # Le chemin d'accès exact sans réécriture
#       - path: /api/hybrid-api
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-backend-service
#             port:
#               number: 8081

    

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hybrid-api-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/use-regex: "true"
# spec:
#   rules:
#   - host: monsite.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-front-service
#             port:
#               number: 80
#   - host: api.monsite.com
#     http:
#       paths:
#       - path: /api/hybrid-api
#         pathType: Prefix
#         backend:
#           service:
#             name: hybrid-api-backend-service
#             port:
#               number: 8081
